feat: 게시글 좋아요, 댓글 테스트 데이터 생성 기능 추가